changed buttons and cards

--- a/portfolio.html
+++ b/portfolio.html
@@ -40,20 +40,20 @@
         <section class="portfolio">
             <div class="container">
                 <div class="portfolio-buttons">
-                    <button class="portfolio-button">
-                        <a class="active" href="#">All</a>
+                    <button class="portfolio-button active">
+                        All
                     </button>
                     <button class="portfolio-button">
-                        <a href="#">Web sites</a>
+                        Web sites
                     </button>
                     <button class="portfolio-button">
-                        <a href="#">Applications</a>
+                        Applications
                     </button>
                     <button class="portfolio-button">
-                        <a href="#">Design</a>
+                        Design
                     </button>
                     <button class="portfolio-button">
-                        <a href="#">Marketing</a>
+                        Marketing
                     </button>
                 </div>
 
