added hover on cards

--- a/index.html
+++ b/index.html
@@ -83,12 +83,15 @@
                 <div class="do-cards">
                     <div class="do-card">
                         <img src="images/do-1.jpg" alt="image doing" width="370" height="294">
+                        <h3 class="do-card-title">Desktop applications</h3>
                     </div>
                     <div class="do-card">
                         <img src="images/do-2.jpg" alt="image doing" width="370" height="294">
+                        <h3 class="do-card-title">Mobile applications</h3>
                     </div>
                     <div class="do-card">
                         <img src="images/do-3.jpg" alt="image doing" width="370" height="294">
+                        <h3 class="do-card-title">Design solutions</h3>
                     </div>
                 </div>
             </div>
