--- a/portfolio.html
+++ b/portfolio.html
@@ -59,56 +59,120 @@
 
                 <div class="portfolio-cards">
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-1.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-1.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
+
                         <h3 class="portfolio-title">Technoquack</h3>
                         <p class="portfolio-desc">sites</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-2.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-2.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Poster New Orlean vs Golden Star</h3>
                         <p class="portfolio-desc">Design</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-3.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-3.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Restaurant Seafood</h3>
                         <p class="portfolio-desc">Applications</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-4.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-4.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Project Prime</h3>
                         <p class="portfolio-desc">Marketing</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-5.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-5.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Project Boxes</h3>
                         <p class="portfolio-desc">Applications</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-6.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-6.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Inspiration has no Borders</h3>
                         <p class="portfolio-desc">Web sites</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-7.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-7.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Edition Limited Edition</h3>
                         <p class="portfolio-desc">Design</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-8.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-8.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Project LAB</h3>
                         <p class="portfolio-desc">Marketing</p>
                     </div>
                     <div class="portfolio-card">
-                        <img class="portfolio-img" src="images/portfolio-9.jpg" alt="Portfolio images" width="370"
-                            height="294">
+                        <div class="hover-container">
+                            <img class="portfolio-img" src="images/portfolio-9.jpg" alt="Portfolio images" width="370"
+                                height="294">
+                            <h4 class="portfolio-hover-desc">The resource offers comprehensive offers with different
+                                levels
+                                of functionality and services. All this will allow the visitor to obtain useful
+                                information
+                                about the company or individual.</h4>
+                        </div>
                         <h3 class="portfolio-title">Growing Business</h3>
                         <p class="portfolio-desc">Applications</p>
                     </div>
