added hover menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,26 @@
                 <li class="header-menu-item">
                     <a href="#footer">Contacts</a>
                 </li>
+                <li class="header-menu-item">
+                    <a href="#">Filterss</a>
+                    <ul class="header-menu-hover">
+                        <li class="header-menu-hover-li">
+                            <a href="#">Web sites</a>
+                        </li>
+                        <li class="header-menu-hover-li">
+                            <a href="#">Aplications</a>
+                        </li>
+                        <li class="header-menu-hover-li">
+                            <a href="#">Design</a>
+                        </li>
+                        <li class="header-menu-hover-li">
+                            <a href="#">Marketing</a>
+                        </li>
+                        <li class="header-menu-hover-li">
+                            <a href="#">All</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
             <ul class="header-menu-right">
                 <li class="header-menu-right-item">
