added icons and bg on a section about

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <div class="container">
                 <div class="about-cards">
                     <div class="about-card">
+                        <div class="about-card-icon">
+                            <img src="images/antenna.svg" alt="icon antenna" width="70" height="70">
+                        </div>
                         <h3 class="about-title">Attention to detail</h3>
                         <p class="about-desc">
                             Ideological considerations, as well as the beginning of the daily work of forming a
@@ -56,6 +59,9 @@
                         </p>
                     </div>
                     <div class="about-card">
+                        <div class="about-card-icon">
+                            <img src="images/clock.svg" alt="icon antenna" width="70" height="70">
+                        </div>
                         <h3 class="about-title">Punctuality</h3>
                         <p class="about-desc">
                             The task of the organization, in particular the scope and location of personnel training,
@@ -63,12 +69,18 @@
                         </p>
                     </div>
                     <div class="about-card">
+                        <div class="about-card-icon">
+                            <img src="images/diagram.svg" alt="icon antenna" width="70" height="70">
+                        </div>
                         <h3 class="about-title">Planning</h3>
                         <p class="about-desc">
                             Equally, consultation with a broad asset is largely conditional.
                         </p>
                     </div>
                     <div class="about-card">
+                        <div class="about-card-icon">
+                            <img src="images/astronaut.svg" alt="icon antenna" width="70" height="70">
+                        </div>
                         <h3 class="about-title">Modern technologies</h3>
                         <p class="about-desc">
                             The significance of these problems is so obvious that the implementation of planned targets.
