changed bg on a section about

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <div class="container">
                 <div class="about-cards">
                     <div class="about-card">
-                        <div class="about-card-icon">
-                            <img src="images/antenna.svg" alt="icon antenna" width="70" height="70">
+                        <div class="about-card-icon icon-antenna">
+                            <!-- <img src="images/antenna.svg" alt="icon antenna" width="70" height="70"> -->
                         </div>
                         <h3 class="about-title">Attention to detail</h3>
                         <p class="about-desc">
@@ -59,8 +59,8 @@
                         </p>
                     </div>
                     <div class="about-card">
-                        <div class="about-card-icon">
-                            <img src="images/clock.svg" alt="icon antenna" width="70" height="70">
+                        <div class="about-card-icon icon-clock">
+                            <!-- <img src="images/clock.svg" alt="icon antenna" width="70" height="70"> -->
                         </div>
                         <h3 class="about-title">Punctuality</h3>
                         <p class="about-desc">
@@ -69,8 +69,8 @@
                         </p>
                     </div>
                     <div class="about-card">
-                        <div class="about-card-icon">
-                            <img src="images/diagram.svg" alt="icon antenna" width="70" height="70">
+                        <div class="about-card-icon icon-diagram">
+                            <!-- <img src="images/diagram.svg" alt="icon antenna" width="70" height="70"> -->
                         </div>
                         <h3 class="about-title">Planning</h3>
                         <p class="about-desc">
@@ -78,8 +78,8 @@
                         </p>
                     </div>
                     <div class="about-card">
-                        <div class="about-card-icon">
-                            <img src="images/astronaut.svg" alt="icon antenna" width="70" height="70">
+                        <div class="about-card-icon icon-astronaut">
+                            <!-- <img src="images/astronaut.svg" alt="icon antenna" width="70" height="70"> -->
                         </div>
                         <h3 class="about-title">Modern technologies</h3>
                         <p class="about-desc">
