Added icons on a Team sections

--- a/index.html
+++ b/index.html
@@ -109,21 +109,166 @@
             </div>
         </section>
         <section class="team">
-            <div class="container">
+            <div class="container team-container">
                 <h2 class="team-title">Our team</h2>
                 <div class="team-cards">
                     <div class="team-card">
-                        <img src="images/team-card-1.jpg" alt="image team" width="270" height="368">
+                        <img src="images/team1.jpg" alt="image team" width="270" height="368">
+                        <div class="team-card-wrapper">
+                            <h3 class="team-card-name">Igor Demyanenko</h3>
+                            <h4 class="team-card-profession">Product Designer</h4>
+                            <ul class="team-links-list">
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </div>
+
                     </div>
                     <div class="team-card">
-                        <img src="images/team-card-2.jpg" alt="image team" width="270" height="368">
+                        <img src="images/team2.jpg" alt="image team" width="270" height="368">
+                        <div class="team-card-wrapper">
+                            <h3 class="team-card-name">Olga Repina</h3>
+                            <h4 class="team-card-profession">Frontend Developer</h4>
+                            <ul class="team-links-list">
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </div>
+
                     </div>
                     <div class="team-card">
-                        <img src="images/team-card-3.jpg" alt="image team" width="270" height="368">
+                        <img src="images/team3.jpg" alt="image team" width="270" height="368">
+                        <div class="team-card-wrapper">
+                            <h3 class="team-card-name">Nikolay Tarasov</h3>
+                            <h4 class="team-card-profession">Marketing</h4>
+                            <ul class="team-links-list">
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </div>
+
                     </div>
                     <div class="team-card">
-                        <img src="images/team-card-4.jpg" alt="image team" width="270" height="368">
+                        <img src="images/team4.jpg" alt="image team" width="270" height="368">
+                        <div class="team-card-wrapper">
+                            <h3 class="team-card-name">Mikhail Ermakov</h3>
+                            <h4 class="team-card-profession">UI Designer</h4>
+                            <ul class="team-links-list">
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#instagram"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#twitter"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#facebook"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="team-links-items">
+                                    <a href="#" class="team-links-items-link">
+                                        <svg class="team-links-items-link-icon">
+                                            <use href="#linkedin"></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+
+                        </div>
+
                     </div>
+
                 </div>
             </div>
         </section>
