--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
+            <div class="header-burger">
+                <span></span>
+            </div>
         </div>
 
     </header>
