--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
         </div>
     </footer>
 
-    <svg xmlns="http://www.w3.org/2000/svg">
+    <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
         <!-- Client1 -->
         <symbol viewBox="0 0 170 92" id="client1">
 
