--- a/portfolio.html
+++ b/portfolio.html
@@ -58,6 +58,11 @@
                     <a href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
+            <div class="header-burger">
+                <span></span>
+            </div>
+
+
         </div>
 
     </header>
@@ -95,7 +100,7 @@
                         </div>
 
                         <h3 class="portfolio-title">Technoquack</h3>
-                        <p class="portfolio-desc">sites</p>
+                        <p class="portfolio-desc">Sites</p>
                     </div>
                     <div class="portfolio-card">
                         <div class="hover-container">
@@ -257,7 +262,7 @@
         </div>
     </footer>
 
-    <svg xmlns="http://www.w3.org/2000/svg">
+    <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
         <!-- Instagram -->
         <symbol viewBox="0 0 20 20" id="instagram">
 
